-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b112
The test compiler/compilercontrol/parser/DirectiveParserTest.java fails:
java.lang.RuntimeException: VM should exit with error on incorrect JSON file: empty array (assert failed: 0 != 0)
at jdk.test.lib.Asserts.error(Asserts.java:447)
at jdk.test.lib.Asserts.assertTrue(Asserts.java:374)
at jdk.test.lib.Asserts.assertFalse(Asserts.java:353)
at jdk.test.lib.Asserts.assertNotEquals(Asserts.java:292)
at jdk.test.lib.Asserts.assertNE(Asserts.java:266)
at compiler.compilercontrol.parser.DirectiveParserTest.arrayTest(DirectiveParserTest.java:111)
at compiler.compilercontrol.parser.DirectiveParserTest.main(DirectiveParserTest.java:49)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:520)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:110)
at java.lang.Thread.run(Thread.java:804)
JavaTest Message: Test threw exception: java.lang.RuntimeException: VM should exit with error on incorrect JSON file: empty array (assert failed: 0 != 0)
JavaTest Message: shutting down test
java.lang.RuntimeException: VM should exit with error on incorrect JSON file: empty array (assert failed: 0 != 0)
at jdk.test.lib.Asserts.error(Asserts.java:447)
at jdk.test.lib.Asserts.assertTrue(Asserts.java:374)
at jdk.test.lib.Asserts.assertFalse(Asserts.java:353)
at jdk.test.lib.Asserts.assertNotEquals(Asserts.java:292)
at jdk.test.lib.Asserts.assertNE(Asserts.java:266)
at compiler.compilercontrol.parser.DirectiveParserTest.arrayTest(DirectiveParserTest.java:111)
at compiler.compilercontrol.parser.DirectiveParserTest.main(DirectiveParserTest.java:49)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:520)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:110)
at java.lang.Thread.run(Thread.java:804)
JavaTest Message: Test threw exception: java.lang.RuntimeException: VM should exit with error on incorrect JSON file: empty array (assert failed: 0 != 0)
JavaTest Message: shutting down test