8151795: compiler/compilercontrol/parser/DirectiveParserTest.java fails with "assert failed: 0 != 0"

Treat zero added directives as fail

Reviewed-by: twisti, kvn